Version 1.13.1

   - Added extended newman_Ziff algorithm for nested percolation

Version 1.12.1 (2022-09-14)

   - Added pulse-coupled oscillators
   - Added core-periphery and modular ER network generators
   - Added a cookbook recipe on defining network ensembles

Version 1.11.1 (2022-07-27)

   - Refactored event rate distributions into Process instead of Dynamics
   - Added per-edge infection variant of SIR
   - Added a global random number generator to simplify replacement if needed
   - Further documented event taps and dynamics
   - Automated GitHub releases and Zenodo DOIs for each release
   - Changed Makefilke target for doing a release to "release" (instead
     of "upload"

Version 1.10.1 (2022-07-21)

   - Added un-posting of posted events
   - Changed StochasticDynamics to continue to run posted events even
     after stochastic events become exhausted (rather than discarding
     un-fired posted events). It remains the case that equilibrium overrides
     posting
   - Refactored event taps API to iunclude the process raising the event
   - Added documentation cross-links to epydemic-signals as an example of
     event taps
   - Fixed times for execution of posted events
   - Added test for removal of elements from loci when processing events
     under synchronous dynamics

Version 1.9.3 (2022-03-27)

   - Fixed another bug in SynchronousDynamics
   - Added explanation of the two different Dynamics classes

Version 1.9.2 (2022-03-22)

   - Fixed bug in process sequences under synchronous dynamics
   - Refactored event rates calculations to not be per-process

Version 1.9.1 (2022-03-08)

   - Refactored event taps to be more general
   - Added events and new query methods to the Newman-Ziff percolation processes
   - Changed the way Newman-Ziff results are returned in notebooks
   - Added named sub-processes in process sequences
   - Reformulated tutorial to avoid some confusions
   - Added recipe on percolation

Version 1.8.1 (2022-01-26)
