@@ -60,7 +60,7 @@ functions <standard-gfs>` corresponding to common degree distributions.
 In use
 ------
 
-Generating functions expose three main functions. Firstly, a
+Generating functions expose several main functions. Firstly, a
 generating function can be evaluated by applying it to a value:
 
 .. code-block:: python
@@ -87,3 +87,20 @@ times:
 
    # extract the degree-5 nodes (the hard way)
    nodes_of_degree_5 = (G0.dx(5))(0) / math.factorial(5)
+
+Finally, a generating function can be multiplied and divided by a
+constant, which is use when (for example) computing an :term:`epidemic
+threshold`:
+
+.. code-block:: python
+
+   N = int(1e4)
+   kmean = 10
+   pRemove = 0.002
+   G0 = gf_er(N, kmean=kmean)
+
+   # compute G1 from the first derivative of G0
+   G1 = G0.dx() / N
+
+   # compute the critical threshold
+   p_c = float(pRemove / G1.dx()(1))
